[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Player/Camera/States/Aim.gd" type="Script" id=1]
[ext_resource path="res://src/Player/Camera/SpringArm.gd" type="Script" id=2]
[ext_resource path="res://src/Player/Camera/AimTarget.gd" type="Script" id=3]
[ext_resource path="res://src/Player/Camera/CameraRig.gd" type="Script" id=4]
[ext_resource path="res://src/StateMachine/State_Machine.gd" type="Script" id=5]
[ext_resource path="res://assets/2d/reticle.png" type="Texture" id=6]
[ext_resource path="res://src/Player/Camera/States/Camera.gd" type="Script" id=7]
[ext_resource path="res://src/Player/Camera/States/Default.gd" type="Script" id=8]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
params_specular_mode = 4
albedo_color = Color( 5, 5, 5, 1 )
albedo_texture = ExtResource( 6 )

[node name="CameraRig" type="Spatial"]
script = ExtResource( 4 )

[node name="Camera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.87462, 0.48481, 0, -0.48481, 0.87462, 0, 0.5, 0.5 )
current = true
target = NodePath("../SpringArm/CameraTarget")
enabled = true

[node name="AimRay" type="RayCast" parent="Camera"]
visible = false
enabled = true
cast_to = Vector3( 0, 0, -20 )
collision_mask = 6

[node name="SpringArm" type="SpringArm" parent="."]
transform = Transform( 1, 0, 0, 0, 0.87462, 0.48481, 0, -0.48481, 0.87462, 0, 0.5, 0.5 )
collision_mask = 2
shape = SubResource( 1 )
spring_length = 4.5
script = ExtResource( 2 )

[node name="CameraTarget" type="Position3D" parent="SpringArm"]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Camera/Default")

[node name="Camera" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
default_sensitivity_gamepad = Vector2( 2, 2 )
default_sensitivity_mouse = Vector2( 1.8, 1.8 )

[node name="Default" type="Node" parent="StateMachine/Camera"]
script = ExtResource( 8 )

[node name="Aim" type="Node" parent="StateMachine/Camera"]
script = ExtResource( 1 )
fov = 50.0
offset_camera = Vector3( 0.75, 0.5, 0 )

[node name="Tween" type="Tween" parent="StateMachine/Camera/Aim"]

[node name="AimTarget" type="Sprite3D" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
visible = false
material_override = SubResource( 2 )
cast_shadow = 0
texture = ExtResource( 6 )
script = ExtResource( 3 )
